2000-12-14	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.